<resources>
    <string name="system_title">系统提示</string>
    <string name="test_name">林海滨</string>
    <string name="test_hosp">广东省人民医院</string>
    <string name="test_content">您的图文咨询有了新回复</string>
    <string name="app_name">薏米医生</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="system_info">应用提示</string>
    <string name="confirm_ok">确定</string>
    <string name="confirm_cancel">取消</string>
    <string name="confirm_yes">是</string>
    <string name="confirm_no">否</string>
    <string name="logout_home">确定要退出吗？</string>
    <string name="public_back">返回</string>
    <string name="public_save">保存</string>
    <string name="public_all">全部</string>
    <string name="add_health_record_notice">提示</string>
    <string name="add_health_record_know">我知道了</string>
    <string name="u_share_title">薏米医生APP</string>
    <string name="u_share_content">手机问诊、预约名医、轻松挂号。薏米认证全国、全球知名医生入驻，您与名医不再遥远！快来下载这款手机APP吧，下载地址：http://app.ememed.net/</string>
    <string name="send_to">给更多人知道</string>
    <string name="apply_hosp_money">元</string>
    <string name="text_get_data_failed">数据加载失败</string>
    <string name="text_get_data_none">暂无数据</string>
    <string name="text_search_none">搜索不到结果，换个关键词试试？？</string>
    <string name="text_get_data_none_contact">您最近暂无联系医生，请点击“首页”找医生</string>
    <string name="text_check_net_setting">请检查网络后点击图标重新加载</string>
    <string name="register_protocol"><u>&lt;薏米医生服务协议&gt;</u></string>
    <string name="title_register">欢迎注册</string>
    <string name="bind_phone">绑定手机号码</string>
    <string name="binding">绑定</string>
    <string name="net_error">网络异常</string>
    <string name="data_error">提交失败，请检查网络</string>
    <string name="register_account_length">手机号码长度错误</string>
    <string name="register_account_length_null">请填写手机号码</string>
    <string name="umeng_example_home_btn_fb">用户反馈</string>
    <string name="login_first">请先登录</string>
    <string name="change_avatar">修改头像</string>
    <string name="change_avatar_success">头像上传成功</string>
    <string name="change_avatar_take_photo">拍照</string>
    <string name="change_avatar_album">相册</string>
    <string name="change_check_album">查看头像</string>
    <string name="service_setting_time_success">设置成功</string>
    <string name="doctor_evaluate">你给医生的评价为</string>
    <string name="person_info">资料设置</string>
    <string name="sms_center">消息中心</string>
    <string name="history_order">我的订单</string>
    <string name="account_recharge">财务详情</string>
    <string name="user_service_set">用户服务设置</string>
    <string name="finance_details">我的余额</string>
    <string name="my_praise">我赞过的</string>
    <string name="my_comment">我评论的</string>
    <string name="my_share">我分享的</string>
    <string name="service_evaluate">服务评价</string>
    <string name="apply_set">设置</string>
    <string name="about_us">关于薏米医生</string>
    <string name="asterisk_prompt">认证信息.带星号为认证必备资料！</string>
    <string name="setting_app_account_safe_prompt">帐号安全</string>
    <string name="setting_app_account_push_notice_prompt">消息推送</string>
    <string name="app_version">当前版本：</string>
    <string name="lt_function_intro">功能介绍</string>
    <string name="lt_encourage">打分鼓励</string>
    <string name="lt_share">我要分享</string>
    <string name="lt_respon">负责声明</string>
    <string name="lt_problem">常见问题</string>
    <string name="act_title_home"></string>
    <string name="act_title_service">资讯</string>
    <string name="act_title_contact">我的医生</string>
    <string name="act_title_stting_app">应用设置</string>
    <string name="act_title_stting_pwd">密码修改</string>
    <string name="frag_title_introduce">简介</string>
    <string name="frag_title_chat">对话</string>
    <string name="frag_title_order">订单</string>
    <string name="act_title_history_order">历史订单</string>
    <string name="add_userseek_girl">女</string>
    <string name="add_userseek_boy">男</string>
    <string name="getuser_setsex">设置性别</string>
    <string name="coupon_deadline">有效期至:</string>
    <string name="tab_bottom_home">首页</string>
    <string name="tab_bottom_contact">我的医生</string>
    <string name="tab_bottom_me">我</string>
    <string name="tab_bottom_service">资讯</string>
    <string name="consult_service">咨询</string>
    <string name="medical_assistant_service">用药助手</string>
    <string name="call_service">薏米助理（电话）</string>
    <string name="text_service">薏米助理（文字）</string>
    <string name="forget_pwd">忘记密码 ></string>
    <string name="title_login">登录账号</string>
    <string name="set_name">姓名</string>
    <string name="set_sex">性别</string>
    <string name="set_birthday">生日</string>
    <string name="set_phone">手机</string>
    <string name="set_identity_card">身份证</string>
    <string name="set_medical_num">医疗卡号</string>
    <string name="set_address">地址</string>
    <string name="save_rename">保存修改</string>
    <string name="seek_phone_verify">验证手机</string>
    <string name="seek_rest_pwd">重置密码</string>
    <string name="seek_success">完成</string>
    <string name="activity_title_find_pw">找回密码</string>
    <string name="seek_step1_title">请填写注册时使用的手机号码</string>
    <string name="seek_step2_title">设置新密码</string>
    <string name="seek_step3_title">密码已重置成功</string>
    <string name="seek_step3_btn">立即登录</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="home_item_textconsult">图文咨询</string>
    <string name="home_item_phoneconsult">预约通话</string>
    <string name="home_item_guahao">预约挂号</string>
    <string name="home_item_shangmen">上门会诊</string>
    <string name="home_item_jiuyi">预约加号</string>
    <string name="home_item_zhuyuan">预约住院</string>
    <string name="home_item_person_doctor">签约私人医生</string>
    <string name="home_item_custom">其他服务</string>
    <string name="home_item_assistant">求助薏米</string>
    <string name="home_item_textconsult_sub">与指定专家线上答疑</string>
    <string name="home_item_phoneconsult_sub">与指定专家直接通话</string>
    <string name="home_item_guahao_sub">公立医院门诊挂号预约</string>
    <string name="home_item_zhuyuan_sub">线下住院预约</string>
    <string name="home_item_shangmen_sub">找医生上门帮忙</string>
    <string name="home_item_person_doctor_sub">签约医生持续为您服务</string>
    <string name="home_item_assistant_sub">试试医生还能帮什么忙</string>
    <string name="home_item_free_textconsult_1">1.8万公立医院专家在线</string>
    <string name="home_item_free_textconsult_2">为您提供解答</string>
    <string name="main_doing">正在下载中  </string>
    <string name="main_next">下次再说  </string>
    <string name="main_shenji">立即升级  </string>
    <string name="main_notice">升级提示  </string>
    <string name="main_size">文件大小:  </string>
    <string name="main_time">更新时间:</string>
    <string name="main_ememed">薏米医生(ANDROID)  </string>
    <string name="search_box_hint">请输入城市、医生、医院、科室</string>
    <string name="search_expert_box_hint">在此输入您要找的医生名</string>
    <string name="activity_doctor_search_button">搜索</string>
    <string name="select_area">请选择地区</string>
    <string name="select_hospital">请选择医院</string>
    <string name="select_room"> 请选择科室</string>
    <string name="select_all_hospital">全部医院</string>
    <string name="my_money">账户余额:</string>
    <string name="my_play_method">选择充值方式</string>
    <string name="my_alipay">支付宝</string>
    <string name="my_bank_card">银行卡</string>
    <string name="search_doctor_name">医生名</string>
    <string name="search_doctor_area">地区</string>
    <string name="search_hospital_name">医院名</string>
    <string name="search_keshi">科室</string>
    <string name="search_speciality">专业擅长:</string>
    <string name="search_consult">咨询</string>
    <string name="search_buy">购买</string>
    <string name="text_consult_alipay">支付</string>
    <string name="text_consult">咨询</string>
    <string name="text_consult_service_evaluate">评价</string>
    <string name="text_consult_reply_hint">医生将会在24小时内回复您的问题</string>
    <string name="phone_consult">联系电话:</string>
    <string name="phone_consult_disease_description">建议您先在输入框内输入您要咨询的详细内容、或者上传能帮助医生准确、快速评判情况的病历、影像图片等资料。</string>
    <string name="phone_consult_reply_hint">本通话由薏米医生发起双方通话，用户无须再付电话费用</string>
    <string name="phone_consult_reply_hint2">温馨提醒：\n  1、您支付成功后请尽快与医生沟通，预约好通话时间，以便医生有充分的准备给予您最好的服务。\n  2、您在08:00-22:30的薏米医生工作时间内均可提出通话需求。\n  3、预约通话服务是由薏米医生发起双方通话，您无须再另行支付通话费用。</string>
    <string name="shangmen_disease_description">为了医生更好的诊断，请先在此描述您的大致病情</string>
    <string name="shangmen_upload_pic">上传图片</string>
    <string name="shangmen_yuyue">咨询</string>
    <string name="private_doctor_select">服务选择</string>
    <string name="search_expert">找专家</string>
    <string name="consult_state">当前状态:</string>
    <string name="phone_consult_setp">预约通话步骤：</string>
    <string name="generated_time">生成时间：</string>
    <string name="order_number">订单号：</string>
    <string name="service_price">服务价格：</string>
    <string name="free_phone_consult">有任何疑问请点击服务热线：</string>
    <string name="free_phone_num">400-900-3333</string>
    <string name="fragment_help_ememeds">求助薏米医生</string>
    <string name="question_description">求助问题描述</string>
    <string name="payment_money">预付款金额：</string>
    <string name="payment_tishi">预付款后，48小时内薏米助理没有匹配医生成功则自动退款</string>
    <string name="my_help">我要求助</string>
    <string name="request_success">求助已成功提交</string>
    <string name="click_see">点击查看</string>
    <string name="immediately_pay_money">立即支付</string>
    <string name="immediately_communication">立即沟通</string>
    <string name="service_evaluate_hint">在此输入您的评价（非必填）</string>
    <string name="satisfaction">满意度：</string>
    <string name="doctor_person_info">个人简介</string>
    <string name="doctor_keshi">所在科室:</string>
    <string name="prof_attributes">专业属性</string>
    <string name="commit_order">提交订单</string>
    <string name="text_ack_msg">已读</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">上滑取消</string>
    <string name="release_to_cancel">松开取消</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">连接不到服务器，请稍后重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="button_cancel">取消</string>
    <string name="old_pwd">原密码：　</string>
    <string name="old_pwd_contant">请输入旧密码</string>
    <string name="new_pwd">新密码：　</string>
    <string name="new_pwd_contant">请输入新密码</string>
    <string name="confirm_pwd">确认密码：</string>
    <string name="sms_order">订单服务短信</string>
    <string name="sms_cash">充值短信</string>
    <string name="sms_activity">活动短信</string>
    <string name="sms_tip_title">温馨提示：</string>
    <string name="sms_tip_1">1、所有短信设置默认为开启状态</string>
    <string name="sms_tip_2">2、关闭后任何时候将不再接收小薏为您发送的短信</string>
</resources>