<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/reseda"
    android:orientation="vertical" >

    <include layout="@layout/top_bar_doctor_green" />

    <View 
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/light_gray"
        android:layout_marginTop="10dp"
        
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_order_sms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
           android:paddingBottom="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical"
                android:text="@string/sms_order"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:gravity="right"
                >
             <net.ememed.user2.widget.SwitchButton
                 android:id="@+id/bt_switch_order_sms"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checked="true" />
     		 </LinearLayout>
        </LinearLayout>
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/reseda"
            />
        
         <LinearLayout
            android:id="@+id/ll_activity_sms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
           android:paddingBottom="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical"
                android:text="@string/sms_cash"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:gravity="right"
                >
             <net.ememed.user2.widget.SwitchButton
                 android:id="@+id/bt_switch_cash_sms"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checked="true" />
     		 </LinearLayout>
        </LinearLayout>
        <View 
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/reseda"
            />
        
         <LinearLayout
            android:id="@+id/ll_cash_sms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
           android:paddingBottom="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:text="@string/sms_activity"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:gravity="right"
                >
             <net.ememed.user2.widget.SwitchButton
                 android:id="@+id/bt_switch_activity_sms"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checked="true" />
     		 </LinearLayout>
        </LinearLayout>
      
    </LinearLayout>
     <View 
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/light_gray"
        />
   
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:orientation="vertical"
         >
         <TextView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:textSize="12sp"
             android:textColor="@color/text_color_gray"
             android:text="@string/sms_tip_title"
             />
          <TextView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:textSize="12sp"
             android:textColor="@color/text_color_gray"
             android:text="@string/sms_tip_1"
             />
           <TextView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:textSize="12sp"
             android:textColor="@color/text_color_gray"
             android:text="@string/sms_tip_2"
             />
         
     </LinearLayout>

</LinearLayout>